src/objects/ADvendio__ProgrammaticAdPrice__c.object
<CustomObject>
    <description>Deprecated please do not use any more.</description>
    <fields>
        <fullName>ADvendio__AdPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated please do not use any more.</description>
        <inlineHelpText>Deprecated please do not use any more.</inlineHelpText>
        <label>AdPrice (deprecated)</label>
        <referenceTo>ADvendio__Ad_price__c</referenceTo>
        <relationshipLabel>Programmatic AdPrices (deprecated)</relationshipLabel>
        <relationshipName>ProgrammaticAdPrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdServerLogin__c</fullName>
        <description>Deprecated please do not use any more.</description>
        <inlineHelpText>Deprecated please do not use any more.</inlineHelpText>
        <label>AdServer Login (deprecated)</label>
        <referenceTo>ADvendio__AdServer_Logins__c</referenceTo>
        <relationshipLabel>Programmatic AdPrices (deprecated)</relationshipLabel>
        <relationshipName>ProgrammaticAdPrices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <description>Deprecated please do not use any more.</description>
        <externalId>true</externalId>
        <inlineHelpText>Deprecated please do not use any more.</inlineHelpText>
        <label>Unique Key (deprecated)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Programmatic AdPrice (deprecated)</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__AdPrice__c</columns>
        <columns>ADvendio__AdServerLogin__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PAAP-{0000}</displayFormat>
        <label>Programmatic AdPrice-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programmatic AdPrices (deprecated)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>